Corrección de gestión de reservas